fix landing text-wrap, hide image switch in mobile view, fix landing page7 img

--- a/src/assets/css/landing.css
+++ b/src/assets/css/landing.css
@@ -52,6 +52,7 @@
 }
 .left.one .title {
   color: var(--color-gray-0);
+  white-space: pre-wrap;
 }
 .left.one .sub-title {
   color: var(--color-gray-0);
@@ -73,10 +74,9 @@
 }
 .left.two .text {
   color: var(--color-gray-0);
-  max-width: 19rem;
-  margin: auto;
   margin-left: 12.5vw;
   margin-top: 19vh;
+  white-space: pre-wrap;
 }
 .left.three {
   background: var(--color-green-0);
@@ -249,6 +249,9 @@
 }
 .left.six {
   background: var(--color-blue-4);
+}
+.left.six .content-block .title {
+  white-space: pre-wrap;
 }
 .left.seven {
   background: var(--color-yellow-2);
@@ -526,8 +529,10 @@
   .left.seven .list-item .arrow .cls-2 {
     stroke: var(--color-gray-7);
   }
-  .right.seven {
+  .right.seven.no-one {
     order: 9;
+    background: url("../img/landing_bg_7.png");
+    background-size: 100% auto;
   }
   .left.five {
     order: 10;
@@ -600,6 +605,9 @@
     font-size: 12px;
   }
   .social-media-bar {
+    display: none;
+  }
+  .right.active .image-switch {
     display: none;
   }
   .mobile-footer {
